# product-recommendation

./: .gitignore  README.md  dvc.yaml  mlflow.db.dvc  params.yaml  pyproject.toml
.dvc/: config
data/: category_tree.csv.dvc  events.csv.dvc  item_properties_part1.csv.dvc  item_properties_part2.csv.dvc
notebooks/: 01_eda.ipynb
scripts/: download_data.sh  featurize.py  prepare_categories.py  prepare_item_properties.py  prepare_sessions.py  train_baseline_model.py  train_models.py  utils.py
src/product_recommendation/: main.py
