[project]
name = "product-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<=3.12.3"
dependencies = []

[dependency-groups]
dev = [
    "dvc[s3]>=3.67.1",
    "jupyter>=1.1.1",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.9",
    "polars>=1.42.0",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]
